[gd_scene load_steps=2 format=3 uid="uid://vaardh0atrrv"]

[ext_resource type="Script" path="res://scenes/level_up_menu.gd" id="1_lwsfk"]

[node name="LevelUpMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwsfk")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="UpgradePanel1" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="HBoxContainer/UpgradePanel1"]
layout_mode = 2
text = "Upgrade 1"

[node name="Desc" type="Label" parent="HBoxContainer/UpgradePanel1"]
layout_mode = 2
text = "DESC ###"

[node name="Button" type="Button" parent="HBoxContainer/UpgradePanel1"]
layout_mode = 2
text = "Select"

[node name="UpgradePanel2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="HBoxContainer/UpgradePanel2"]
layout_mode = 2
text = "Upgrade 2"

[node name="Desc" type="Label" parent="HBoxContainer/UpgradePanel2"]
layout_mode = 2
text = "DESC ###"

[node name="Button" type="Button" parent="HBoxContainer/UpgradePanel2"]
layout_mode = 2
text = "Select"

[node name="UpgradePanel3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="HBoxContainer/UpgradePanel3"]
layout_mode = 2
text = "Upgrade 3"

[node name="Desc" type="Label" parent="HBoxContainer/UpgradePanel3"]
layout_mode = 2
text = "DESC ###"

[node name="Button" type="Button" parent="HBoxContainer/UpgradePanel3"]
layout_mode = 2
text = "Select"
